# CassandraRustMapping

./: Cargo.toml
src/: car.rs  main.rs  user.rs
