[package]
name = "cassandramapping"
version = "0.1.0"
authors = ["Jasper <jasperav@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cdrs = "*"
uuid = { version = "0.8", features = ["v4"] }
cdrs_helpers_derive = "*"